docs: update INSTALL

--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,7 @@ Dependencies
 
 On hforge websites:
 
- - itools http://www.hforge.org/itools/
- - ikaaro http://www.hforge.org/ikaaro/
- - itws   http://www.hforge.org/itws/
+ - itools 0.62 http://www.hforge.org/itools/
+ - ikaaro 0.62 http://www.hforge.org/ikaaro/
+ - itws   1.2  http://www.hforge.org/itws/
 
